# Lama

./: .gitignore  .gitmodules  dune-project
json/: Json_bytecode.ml  client.ml  dune  index.html  lama_bc_json.ml  lama_on_node.ml  libSerialize.ml  node_shallow.ml  node_shallow.t  print1.t  run.t  runQCsm.ml  styles.css  testJS.t
json/tasks/1expr/: 1.lama  1.lama.json  1write.bc.json  dune
json/tasks/2loops/: 1fac.bc.json  2fib.bc.json  2fib.lama  2fib.lama.json  dune
json/tasks/3functions/: 1.bc.json  dune
json/tasks/4other/: 081zip.bc.json  081zip.lama.json  111concat.bc.json  1append.bc.json  1append.lama  1append.lama.json  dune  test050.bc.json  test050.lama  test050.lama.json  test081.lama
regression/: all_tests.t  dune
runtime/: dune
spec/: .gitignore
src/: Language.ml  SM.ml  SM.mli  dune
stdlib/: Makefile  dune
