(env
 (dev
  (flags
   (:standard -warn-error -A))))

(library
 (name libSerialize)
 (package Lama-Sirius)
 (flags
  (:standard -rectypes))
 (modules libSerialize)
 (libraries yojson liba))

(executable
 (name runQCsm)
 ;(package Lama-Sirius)
 (modules runQCsm)
 (flags
  (:standard -rectypes))
 (libraries libSerialize qcheck-core qcheck-core.runner))

(executable
 (name json_bytecode)
 (package Lama-Sirius)
 (public_name json_bytecode)
 (flags
  (:standard -rectypes))
 (modules json_bytecode)
 (libraries libSerialize opium cohttp-lwt-unix yojson liba))

(executable
 (name lama_bc_json)
 (package Lama-Sirius)
 (public_name lama_bc_json)
 (flags
  (:standard -rectypes))
 (modules lama_bc_json)
 (libraries libSerialize yojson liba))

(cram
 (deps ./json_bytecode.exe))

(install
 (section share)
 (source_trees tasks)
 (package Lama-Sirius))
