(rule
 (deps
  (:lama 1write.lama)
  %{project_root}/runtime/Std.i)
 (targets 1write.lama.json)
 (mode (promote))
 (action
  (progn
   ;(run ls ../../../runtime)
   (run
    %{project_root}/json/json_bytecode.exe
    -path
    ../../../runtime
    -o
    %{targets}
    -src2json
    %{lama}))))

(rule
 (deps
  (:lama 1write.lama)
  %{project_root}/runtime/Std.i)
 (targets 1write.bc.json)
 (mode (promote))
 (action
  (run
   %{project_root}/json/json_bytecode.exe
   -path
   ../../../runtime
   -o
   %{targets}
   -compile-to-bc-json
   %{lama})))
