(rule
 (deps
  (:lama 1fac.lama))
 (targets 1fac.lama.json)
 (mode (promote))
 (action
  (run
   %{project_root}/json/json_bytecode.exe
   -path
   ../../../runtime
   -o
   %{targets}
   -src2json
   %{lama})))

(rule
 (deps
  (:lama 1fac.lama))
 (targets 1fac.bc.json)
 (mode (promote))
 (action
  (run
   %{project_root}/json/json_bytecode.exe
   -path
   ../../../runtime
   -o
   %{targets}
   -compile-to-bc-json
   %{lama})))

(rule
 (deps
  (:lama 2fib.lama))
 (targets 2fib.lama.json)
 (mode (promote))
 (action
  (run
   %{project_root}/json/json_bytecode.exe
   -path
   ../../../runtime
   -o
   %{targets}
   -src2json
   %{lama})))

(rule
 (deps
  (:lama 2fib.lama))
 (targets 2fib.bc.json)
 (mode (promote))
 (action
  (run
   %{project_root}/json/json_bytecode.exe
   -path
   ../../../runtime
   -o
   %{targets}
   -compile-to-bc-json
   %{lama})))
